--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1 class="text-3xl font-bold text-center mb-4 flex items-center justify-center gap-2">
       <span>🌿</span> AirCare
     </h1>
+
     <div class="mb-4 flex flex-col gap-2 relative">
       <label for="cityInput" class="block font-medium">Choisir une ville :</label>
       <input type="text" id="cityInput" placeholder="Ex : Paris"
@@ -19,6 +20,7 @@
         autocomplete="off" />
       <!-- Autocomplete suggestions -->
       <ul id="citySuggestions" class="absolute z-10 left-0 right-0 bg-white border border-gray-200 rounded mt-1 hidden"></ul>
+
       <div class="flex gap-2 mt-2">
         <button id="fetchBtn" class="flex-1 bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded transition-all">
           Rechercher
@@ -34,6 +36,8 @@
       <span class="ml-3 text-indigo-500 font-medium">Chargement…</span>
     </div>
 
+    <div id="errorMsg" class="hidden mt-4 p-2 rounded bg-red-100 text-red-700 text-center font-medium"></div>
+
     <div id="result" class="mt-4 hidden transition-all duration-700">
       <div class="flex items-center justify-center mb-2">
         <span id="emoji" class="text-4xl"></span>
@@ -43,7 +47,12 @@
       <div id="recommendation" class="mt-2 text-base"></div>
     </div>
 
-    <div id="errorMsg" class="hidden mt-4 p-2 rounded bg-red-100 text-red-700 text-center font-medium"></div>
+    <!-- --- NOUVELLE SECTION : Historique AQI --- -->
+    <div id="historySection" class="mt-6 hidden transition-all duration-700">
+      <h3 class="text-lg font-semibold mb-2">Historique AQI</h3>
+      <ul id="historyList" class="list-disc list-inside text-sm text-gray-700"></ul>
+    </div>
+
   </div>
   <script src="app.js"></script>
 </body>
