--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,6 +59,8 @@
       <div id="quality" class="text-lg font-semibold"></div>
       <!-- Health recommendation based on AQI -->
       <div id="recommendation" class="mt-2 text-base"></div>
+      <!-- Main pollutant components -->
+      <div id="components" class="mt-2 text-sm text-gray-700"></div>
     </div>
 
     <!-- AQI History Section: recent measurements -->
