--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AirCare - Air Quality</title>
+  <title>AirCare - Qualité de l'air</title>
   <!-- Import Tailwind CSS from CDN for rapid styling -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Optionally add your own custom CSS -->
@@ -19,9 +19,9 @@
 
     <!-- City selection and geolocation controls -->
     <div class="mb-4 flex flex-col gap-2 relative">
-        <label for="cityInput" class="block font-medium">Choose a city:</label>
+      <label for="cityInput" class="block font-medium">Choisir une ville :</label>
       <!-- Input for manual city search with autocomplete -->
-        <input type="text" id="cityInput" placeholder="e.g. Paris"
+      <input type="text" id="cityInput" placeholder="Ex : Paris"
         class="w-full p-2 border border-gray-300 rounded focus:ring-2 focus:ring-indigo-200 transition-all"
         autocomplete="off" />
       <!-- Autocomplete dropdown suggestions (hidden by default) -->
@@ -30,10 +30,10 @@
       <!-- Buttons: Search by city or use geolocation -->
       <div class="flex gap-2 mt-2">
         <button id="fetchBtn" class="flex-1 bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded transition-all">
-          Search
+          Rechercher
         </button>
         <button id="geoBtn" class="flex-1 bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded transition-all">
-          📍 My location
+          📍 Ma position
         </button>
       </div>
     </div>
@@ -41,7 +41,7 @@
     <!-- Loader spinner, shown during data fetch -->
     <div id="loader" class="hidden flex justify-center items-center py-4">
       <div class="loader"></div>
-      <span class="ml-3 text-indigo-500 font-medium">Loading…</span>
+      <span class="ml-3 text-indigo-500 font-medium">Chargement…</span>
     </div>
 
     <!-- Error message display, hidden by default -->
@@ -63,7 +63,7 @@
 
     <!-- AQI History Section: recent measurements -->
     <div id="historySection" class="mt-6 hidden transition-all duration-700">
-        <h3 class="text-lg font-semibold mb-2">AQI History</h3>
+      <h3 class="text-lg font-semibold mb-2">Historique AQI</h3>
       <ul id="historyList" class="list-disc list-inside text-sm text-gray-700"></ul>
     </div>
   </div>
