docs: add local setup guide and UI tweaks

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,9 +9,9 @@
   <!-- Optionally add your own custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-gradient-to-br from-blue-100 to-indigo-200 min-h-screen flex flex-col items-center justify-center text-gray-800 font-sans transition-all duration-700">
+<body class="bg-gradient-to-br from-blue-100 to-indigo-200 min-h-screen flex flex-col items-center justify-center text-gray-800 font-sans transition-all duration-700 px-2">
   <!-- Main container for the app -->
-  <div class="w-full max-w-md p-6 bg-white shadow-2xl rounded-2xl relative">
+  <div class="w-full max-w-md md:max-w-lg p-6 bg-white shadow-2xl rounded-2xl relative mx-auto">
     <!-- Application title with emoji -->
     <h1 class="text-3xl font-bold text-center mb-4 flex items-center justify-center gap-2">
       <span>🌿</span> AirCare
