feat: externalize API base URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,6 @@
     </div>
   </div>
   <!-- Main JavaScript file for frontend logic -->
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
