--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,10 @@
   </script>
   <!-- Import Tailwind CSS from CDN and enable class-based dark mode -->
   <script>
-    tailwind.config = { darkMode: 'class' };
+    // Ensure the `tailwind` object exists before assigning the config to avoid
+    // "tailwind is not defined" errors in some browsers.
+    window.tailwind = window.tailwind || {};
+    window.tailwind.config = { darkMode: 'class' };
   </script>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Optionally add your own custom CSS -->
