--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,10 +44,10 @@
 
       <!-- Buttons: Search by city or use geolocation -->
       <div class="flex gap-2 mt-2">
-        <button id="fetchBtn" class="flex-1 bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded transition-all">
+        <button id="fetchBtn" class="flex-1 bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded transition-all dark:bg-indigo-600 dark:hover:bg-indigo-700">
           Search
         </button>
-        <button id="geoBtn" class="flex-1 bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded transition-all">
+        <button id="geoBtn" class="flex-1 bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded transition-all dark:bg-green-600 dark:hover:bg-green-700">
           📍 My location
         </button>
       </div>
