Fix Amplify CDN path

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
     </div>
   </div>
   <!-- AWS Amplify for Cognito authentication -->
-  <script src="https://unpkg.com/aws-amplify@6/dist/aws-amplify.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aws-amplify@4.3.46/dist/aws-amplify.min.js"></script>
   <!-- Main JavaScript file for frontend logic -->
   <script type="module" src="app.js"></script>
 </body>
