--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,15 +14,19 @@
       const savedTheme = localStorage.getItem('theme') || getCookie('theme');
       if (savedTheme === 'light') {
         document.documentElement.classList.remove('dark');
+        document.body.classList.remove('dark');
       } else if (savedTheme === 'dark') {
         document.documentElement.classList.add('dark');
+        document.body.classList.add('dark');
       } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.documentElement.classList.add('dark');
+        document.body.classList.add('dark');
       }
     } catch (err) {
       const savedTheme = getCookie('theme');
       if (savedTheme === 'dark' || (!savedTheme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
         document.documentElement.classList.add('dark');
+        document.body.classList.add('dark');
       }
     }
   </script>
