style: improve AQI history list

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
     <div id="historySection" class="mt-6 hidden transition-all duration-700">
       <h3 class="text-lg font-semibold mb-2">AQI History</h3>
       <canvas id="historyChart" class="w-full h-48 mb-4"></canvas>
-      <ul id="historyList" class="list-disc list-inside text-sm text-gray-700"></ul>
+      <ul id="historyList" class="text-sm text-gray-700 space-y-2"></ul>
     </div>
   </div>
   <!-- Chart.js for history graph -->
