docs: add troubleshooting for local setup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,7 +76,7 @@
     </div>
   </div>
   <!-- Chart.js for history graph -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.js"></script>
   <!-- AWS Amplify for Cognito authentication -->
   <script src="https://cdn.jsdelivr.net/npm/aws-amplify@4.3.46/dist/aws-amplify.min.js"></script>
   <!-- Main JavaScript file for frontend logic -->
