feat(frontend): show offline status

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,8 @@
         <button id="themeToggle" class="ml-2 border rounded p-1 text-sm">Dark</button>
       </div>
     </div>
+    <!-- Offline notice -->
+    <div id="offlineNotice" class="hidden mb-4 p-2 text-center rounded bg-yellow-100 text-yellow-700 font-medium"></div>
 
     <!-- City selection and geolocation controls -->
     <div class="mb-4 flex flex-col gap-2 relative">
