--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,9 @@
       </div>
     </div>
     <!-- Offline notice -->
-    <div id="offlineNotice" class="hidden mb-4 p-2 text-center rounded bg-yellow-100 text-yellow-700 font-medium"></div>
+      <div id="offlineNotice" class="hidden mb-4 p-2 text-center rounded bg-yellow-100 text-yellow-700 font-medium">
+        You're offline. Some features may be unavailable.
+      </div>
 
     <!-- City selection and geolocation controls -->
     <div class="mb-4 flex flex-col gap-2 relative">
